# CP-lib

./: .clang-format  .clang-tidy  .clangd  .gitignore  .pre-commit-config.yaml  AGENTS.md  CITATION.bib  CMakeLists.txt  CONTRIBUTING.md  ICPCnotebook.cls  LICENSE  Makefile  README.md  config.yml  cpv_patch.py  manager.py  notebook.bib  notebook.tex  notebook.typ  pyproject.toml  requirements.txt  tcgen.yml  tempCodeRunnerFile.cpp
.competitive-verifier/: config.toml
.competitive-verifier/docs/: _config.yml  index.md
.github/: copilot-instructions.md  dependabot.yml
.github/ci-scripts/: build-cpp-coverage-pages.sh  cleanup-runner.sh  collect-gcov.sh  create-gpp-wrappers.sh  download-fonts.sh  hash-base.sh  load_compare_py.sh  print-storage-info.sh  restore-verify-cache.sh  save-verify-cache-branch.sh
.github/workflows/: benchmark.yml  codeql.yml  flawfinder.yml  lint_pr_title.yml  python-tests.yml  release.yml  summary.yml  verify.yml
.verify-helper/: config.toml
.verify-helper/docs/: _config.yml  index.md
cheatsheet/: bash.tex  decimal.tex  seqences.tex  vim.tex
cheatsheet/tex/: integral.tex  nt-const.tex  oeis-seq.tex  sequences.tex
cheatsheet/typ/: nt-const.typ
data/tsp-vlsi/: README.md
doc/: ARCHITECTURE.md  CONTRIBUTING.md  MANAGER_SYSTEM.md
doc_md/bit/: bswap.md  cntlsb.md  ffs.md  lowbit.md  parity.md
doc_md/comb/: ball_box_dda.md  ball_box_ddl.md  ball_box_ddm.md  ball_box_dia.md  ball_box_dil.md  ball_box_dim.md  ball_box_ida.md  ball_box_idl.md  ball_box_idm.md  ball_box_iia.md  ball_box_iil.md  ball_box_iim.md  binom.md  exlucas.md  gen_ball_box_ii.md  gen_bell.md  gen_bernoulli.md  gen_derange.md  gen_fact.md  gen_ifact.md  gen_inv.md  gen_invseq.md  gen_ipowi.md  gen_partition.md  gen_pows.md  gen_stirling1_col.md  gen_stirling1_row.md  gen_stirling2_col.md  gen_stirling2_row.md  qbinom.md  stirling1_smallp.md  stirling2_smallp.md
doc_md/conv/: conv_3ntt.md  conv_and.md  conv_czt.md  conv_dft.md  conv_gcd.md  conv_lcm.md  conv_minplus_cv.md  conv_minplus_cv_cv.md  conv_mtt.md  conv_mval_dft.md  conv_naive.md  conv_naive_mod.md  conv_ntt_large.md  conv_or.md  conv_subset.md  conv_u128.md  conv_u64.md  conv_xor.md  convcyc_naive.md  fft_r2.md  fft_r3.md  ntt.md  ntt_doubling.md  wht.md  zmt_divisor.md  zmt_multiple.md  zmt_subset.md  zmt_supset.md
doc_md/ds/: bt_trv.md  cartesian_tree.md  d_ary_heap.md  depq.md  (+32 more)
libs/: __init__.py  cli.py  configs.py  consts.py  decorator.py  latex_utils.py  run_command.py  templates.py  testcase_matrix.py  typst_utils.py  utils.py
script/: download_fonts.sh
scripts/: fix_line_endings.py  replace_chinese_punct.py
src/: decimal_example.py  exeuclid_node.cpp  fib.cpp  index.yml  run.sh
template/: ICPCnotebook.cls  common.typ  notebook.tex  notebook.typ
tests/: README.md  conftest.py
(+15609 files in other folders)
