[project]
name = "cp-lib"
version = "1.2.1"
description = "Code library for Competitive Programming"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "autopep8>=2.3.2",
    "click>=8.4.1",
    "coloredlogs>=15.0.1",
    "multipledispatch>=1.0.0",
    "pyyaml>=6.0.3",
    "orjson>=3.11.9"
]

[dependency-groups]
dev = [
    "clang>=21.1.7",
    "pre-commit>=4.6.0",
    "pycodestyle>=2.14.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]
latex = [
    "pygments>=2.20.0",
]
verify = [
    "competitive-verifier>=4.1.1",
    "gcovr>=8.6",
]
bundle = [
    "online-judge-verify-helper>=5.6.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["test/cplib"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "system: System tests",
]
